# epgstation-encode-request-batch

./: Cargo.toml  README.md
src/: main.rs
src/config/: config.rs  model.rs
src/epgstation_api/: api.rs  model.rs
